# yalapm

./: .gitignore  README.md  pyproject.toml  yalapm-v1.py  yalapm.py
.github/workflows/: release.yml
yalapm/: __init__.py
