[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yalapm"
version = "0.1.2"
description = "Yet Another Linux APM Monitor"
authors = [
    { name = "Pierre Maciel", email = "pierre@webizz.biz" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pynput",
    "textual",
]

[tool.setuptools]
packages = ["yalapm"]

[project.scripts]
yalapm = "yalapm:main"
